// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The page handler function sets the value of pageData with displayAnalytics false 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "view",
      Object {
        "acceptedTracking": false,
        "altLang": Array [],
        "analyticsMessageDisplayed": false,
        "analyticsSelected": false,
        "backRef": null,
        "displayAnalytics": false,
        "mssgs": undefined,
        "pageLanguageSetToWelsh": false,
        "uri": Object {
          "analyticsFormAction": "/buy/process-analytics-preferences",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The page handler function sets the value of pageData with displayAnalytics true 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "view",
      Object {
        "acceptedTracking": false,
        "altLang": Array [],
        "analyticsMessageDisplayed": false,
        "analyticsSelected": false,
        "backRef": null,
        "displayAnalytics": true,
        "mssgs": undefined,
        "pageLanguageSetToWelsh": false,
        "uri": Object {
          "analyticsFormAction": "/buy/process-analytics-preferences",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
